--- a/template/go/Dockerfile
+++ b/template/go/Dockerfile
@@ -18,6 +18,7 @@ RUN test "$NETRC_ENABLED" \
 ARG GO111MODULE="on"
 ARG GOSUMDB="off"
 ARG GOPROXY=""
+ARG GOPRIVATE=""
 ARG GOFLAGS=""
 
 ENV CGO_ENABLED=0
